--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.3.3",
+    "require-directory": "^2.1.1",
+    "socket.io": "^2.1.1",
     "stripe": "^6.12.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-rc.1",
     "@babel/core": "^7.0.0-rc.1",
     "@babel/node": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.0.0-rc.1",
     "nodemon": "^1.18.4"
   }
