--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "mongoose": "^5.3.3",
     "require-directory": "^2.1.1",
     "socket.io": "^2.1.1",
