first build with mongo

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Dependency Injection testing using node+express",
   "main": "src",
   "scripts": {
-    "start": "nodemon --exec babel-node src"
+    "start": "nodemon --exec babel-node src",
+    "test": "echo 'TEST SUCCESSFUL'"
+
   },
   "author": {
     "name": "Shankar Regmi",
