--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,17 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
 version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
-      - image: circleci/node:7.10
-
-    working_directory: ~/repo
-
+      - image: circleci/node:8
+      - image: circleci/mongo:3
     steps:
       - checkout
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: npm install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      # run tests!
-      - run: npm start
-
-
+      - run:
+          name: install-dependencies
+          command: npm install
+      - run:
+          name: tests
+          command: npm test
+      - start:
+          name: run the app
+          command: npm start
